--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <title>KickStore | Ecommerce Website</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="navbar">
-        <div class="logo">
-            <img src="static/logo.png" width="125px">
-        </div>
-        <nav>
+    <div class="header">
+    <div class="container">
+        <div class="navbar">
+            <div class="logo">
+            <img src="static/logo2.png" width="125px">
+         </div>
+         <nav>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">Products</a></li>
@@ -18,7 +21,20 @@
                 <li><a href="">Contact</a></li>
                 <li><a href="">Profile</a></li>
             </ul>
-        </nav>
+         </nav>
+            <img src="static/cart.png" width="80px" height="80px">
+        </div>
+        <div class="row">
+            <div class="col-2">
+                <h1> Give Your Feet <br>A New Style!</h1>
+                <p>lorem..........</p>
+                <a href="" class="btn">Check it out</a>
+            </div>
+            <div class="col-2">
+                <img src="static/image1.avif">
+            </div>
+        </div>
     </div>
+   </div>
 </body>
 </html>
