featured products commit

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>KickStore | Ecommerce Website</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css">
 </head>
 <body>
     <div class="header">
@@ -36,5 +37,74 @@
         </div>
     </div>
    </div>
+<div class="categories">
+    <div class="small-container">
+            <div class="row">
+        <div class="col-3">
+            <img src="static/pr1.webp">
+        </div>
+        <div class="col-3">
+            <img src="static/pr2.jpg">
+        </div>
+        <div class="col-3">
+            <img src="static/pr3.webp">
+        </div>
+    </div>
+    </div>
+
+</div>
+    <div class="small-container">
+        <h2 class="title"> Featured Products</h2>
+        <div class="row">
+            <div class="col-4">
+                <img src="static/pr4.jpg">
+                <h4>Red Sneakers</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <p>$120.00</p>
+            </div>
+            <div class="col-4">
+                <img src="static/pr4.jpg">
+                <h4>Red Sneakers</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <p>$120.00</p>
+            </div>
+            <div class="col-4">
+                <img src="static/pr4.jpg">
+                <h4>Red Sneakers</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <p>$120.00</p>
+            </div>
+            <div class="col-4">
+                <img src="static/pr4.jpg">
+                <h4>Red Sneakers</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-o"></i>
+                </div>
+                <p>$120.00</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
