offer section commit

--- a/index.html
+++ b/index.html
@@ -157,5 +157,20 @@
             </div>
         </div>
     </div>
+    <div class="offer">
+        <div class="small-container">
+            <div class="row">
+                <div class="col-2">
+                    <img src="static/image1.jpg" class="offer-img">
+                </div>
+                <div class="col-2">
+                    <p>Exclusively Available on KickStore</p>
+                    <h1>Jordan sneakers</h1>
+                    <small>info o butach</small>
+                    <a href="" class="btn">Buy Now &#8594;</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
