testimonial section commit

--- a/index.html
+++ b/index.html
@@ -172,5 +172,50 @@
             </div>
         </div>
     </div>
+    <div class="testimonial">
+        <div class="small-container">
+            <div class="row">
+                <div class="col-3">
+                   <i class="fa fa-quote-left"></i>
+                    <p>Lorem sdssd</p>
+                    <div class="rating">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                    </div>
+                    <img src="static/pr2.jpg">
+                    <h3>Caroline Parker</h3>
+                </div>
+                <div class="col-3">
+                   <i class="fa fa-quote-left"></i>
+                    <p>Lorem sdssd</p>
+                    <div class="rating">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                    </div>
+                    <img src="static/pr2.jpg">
+                    <h3>Caroline Parker</h3>
+                </div>
+                <div class="col-3">
+                   <i class="fa fa-quote-left"></i>
+                    <p>Lorem sdssd</p>
+                    <div class="rating">
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                        <i class="fa fa-star"></i>
+                    </div>
+                    <img src="static/pr2.jpg">
+                    <h3>Caroline Parker</h3>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
