--- a/index.html
+++ b/index.html
@@ -217,5 +217,26 @@
             </div>
         </div>
     </div>
+    <div class="brands">
+        <div class="small-container">
+            <div class="row">
+                <div class="col-5">
+                    <img src="static/logo.png">
+                </div>
+                <div class="col-5">
+                    <img src="static/logo.png">
+                </div>
+                <div class="col-5">
+                    <img src="static/logo.png">
+                </div>
+                <div class="col-5">
+                    <img src="static/logo.png">
+                </div>
+                <div class="col-5">
+                    <img src="static/logo.png">
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
