--- a/index.html
+++ b/index.html
@@ -238,5 +238,42 @@
             </div>
         </div>
     </div>
+    <div class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col-1">
+                    <h3>Download Our App</h3>
+                    <p>Download App for IOS and Android Mobile</p>
+                <div class="app-logo">
+                    <img src="static/pr1.webp">
+                    <img src="static/pr1.webp">
+                </div>
+                </div>
+                <div class="footer-col-2">
+                    <img src="static/pr4.jpg">
+                    <p>Lorem</p>
+                </div>
+                <div class="footer-col-3">
+                    <h3>Useful Links</h3>
+                    <ul>
+                        <li>Coupons</li>
+                        <li>Blog</li>
+                        <li>Return Policy</li>
+                        <li>Join Us</li>
+                    </ul>
+                </div>
+                <div class="footer-col-4">
+                    <h3>Follow us</h3>
+                    <ul>
+                        <li>Facebook</li>
+                        <li>Instagram</li>
+                        <li>Linkedin</li>
+                    </ul>
+                </div>
+            </div>
+            <hr>
+            <p class="copyright">Copyright 2024 spiwik98</p>
+        </div>
+    </div>
 </body>
 </html>
