--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>KickStore | Ecommerce Website</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="header">
@@ -28,11 +28,10 @@
         <div class="row">
             <div class="col-2">
                 <h1> Give Your Feet <br>A New Style!</h1>
-                <p>lorem..........</p>
                 <a href="" class="btn">Check it out</a>
             </div>
             <div class="col-2">
-                <img src="static/image1.avif">
+                <img src="static/2-removebg-preview.png">
             </div>
         </div>
     </div>
@@ -41,13 +40,13 @@
     <div class="small-container">
             <div class="row">
         <div class="col-3">
-            <img src="static/pr1.webp">
+            <img src="static/cat1.jpg">
         </div>
         <div class="col-3">
-            <img src="static/pr2.jpg">
+            <img src="static/cat2.jpg">
         </div>
         <div class="col-3">
-            <img src="static/pr3.webp">
+            <img src="static/cat3.jpg">
         </div>
     </div>
     </div>
@@ -57,7 +56,7 @@
         <h2 class="title"> Featured Products</h2>
         <div class="row">
             <div class="col-4">
-                <img src="static/pr4.jpg">
+                <img src="static/feature1.jpg">
                 <h4>Red Sneakers</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -69,7 +68,7 @@
                 <p>$120.00</p>
             </div>
             <div class="col-4">
-                <img src="static/pr4.jpg">
+                <img src="static/feature2.jpg">
                 <h4>Red Sneakers</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -81,7 +80,7 @@
                 <p>$120.00</p>
             </div>
             <div class="col-4">
-                <img src="static/pr4.jpg">
+                <img src="static/feature3.jpg">
                 <h4>Red Sneakers</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -93,7 +92,7 @@
                 <p>$120.00</p>
             </div>
             <div class="col-4">
-                <img src="static/pr4.jpg">
+                <img src="static/feature4.jpg">
                 <h4>Red Sneakers</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -108,7 +107,7 @@
         <h2 class="title"> Latest Products</h2>
         <div class="row">
             <div class="col-4">
-                <img src="static/pr4.jpg">
+                <img src="static/latest5.jpg">
                 <h4>Red Sneakers</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -120,7 +119,7 @@
                 <p>$120.00</p>
             </div>
             <div class="col-4">
-                <img src="static/pr4.jpg">
+                <img src="static/latest6.jpg">
                 <h4>Red Sneakers</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -132,7 +131,7 @@
                 <p>$120.00</p>
             </div>
             <div class="col-4">
-                <img src="static/pr4.jpg">
+                <img src="static/latest7.jpg">
                 <h4>Red Sneakers</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -144,7 +143,211 @@
                 <p>$120.00</p>
             </div>
             <div class="col-4">
-                <img src="static/pr4.jpg">
+                <img src="static/latest8.jpg">
+                <h4>Red Sneakers</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-o"></i>
+                </div>
+                <p>$120.00</p>
+            </div>
+            <div class="col-4">
+                <img src="static/latest1.jpg">
+                <h4>Red Sneakers</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <p>$120.00</p>
+            </div>
+            <div class="col-4">
+                <img src="static/latest2.jpg">
+                <h4>Red Sneakers</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <p>$120.00</p>
+            </div>
+            <div class="col-4">
+                <img src="static/latest3.jpg">
+                <h4>Red Sneakers</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <p>$120.00</p>
+            </div>
+            <div class="col-4">
+                <img src="static/latest4.jpg">
+                <h4>Red Sneakers</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-o"></i>
+                </div>
+                <p>$120.00</p>
+            </div>
+            <div class="col-4">
+                <img src="static/latest9.jpg">
+                <h4>Red Sneakers</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <p>$120.00</p>
+            </div>
+            <div class="col-4">
+                <img src="static/latest10.jpg">
+                <h4>Red Sneakers</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <p>$120.00</p>
+            </div>
+            <div class="col-4">
+                <img src="static/latest11.jpg">
+                <h4>Red Sneakers</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <p>$120.00</p>
+            </div>
+            <div class="col-4">
+                <img src="static/latest12.jpg">
+                <h4>Red Sneakers</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-o"></i>
+                </div>
+                <p>$120.00</p>
+            </div>
+            <div class="col-4">
+                <img src="static/latest13.jpg">
+                <h4>Red Sneakers</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <p>$120.00</p>
+            </div>
+            <div class="col-4">
+                <img src="static/latest14.jpg">
+                <h4>Red Sneakers</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <p>$120.00</p>
+            </div>
+            <div class="col-4">
+                <img src="static/latest15.jpg">
+                <h4>Red Sneakers</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <p>$120.00</p>
+            </div>
+            <div class="col-4">
+                <img src="static/latest8.jpg">
+                <h4>Red Sneakers</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-o"></i>
+                </div>
+                <p>$120.00</p>
+            </div>
+            <div class="col-4">
+                <img src="static/latest1.jpg">
+                <h4>Red Sneakers</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <p>$120.00</p>
+            </div>
+            <div class="col-4">
+                <img src="static/latest2.jpg">
+                <h4>Red Sneakers</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <p>$120.00</p>
+            </div>
+            <div class="col-4">
+                <img src="static/latest3.jpg">
+                <h4>Red Sneakers</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+                <p>$120.00</p>
+            </div>
+            <div class="col-4">
+                <img src="static/latest4.jpg">
+                <h4>Red Sneakers</h4>
+                <div class="rating">
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-half-o"></i>
+                </div>
+                <p>$120.00</p>
+            </div>
+            <div class="col-4">
+                <img src="static/latest1.jpg">
                 <h4>Red Sneakers</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -161,12 +364,11 @@
         <div class="small-container">
             <div class="row">
                 <div class="col-2">
-                    <img src="static/image1.jpg" class="offer-img">
+                    <img src="static/off-white-x-air-jordan-1-retro-high-og-white-jordan-1-off-white-11563429018exqbuavl9f-removebg-preview.png" class="offer-img">
                 </div>
                 <div class="col-2">
                     <p>Exclusively Available on KickStore</p>
                     <h1>Jordan sneakers</h1>
-                    <small>info o butach</small>
                     <a href="" class="btn">Buy Now &#8594;</a>
                 </div>
             </div>
@@ -185,7 +387,7 @@
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
                     </div>
-                    <img src="static/pr2.jpg">
+                    <img src="static/user-2.png">
                     <h3>Caroline Parker</h3>
                 </div>
                 <div class="col-3">
@@ -198,7 +400,7 @@
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
                     </div>
-                    <img src="static/pr2.jpg">
+                    <img src="static/user-2.png">
                     <h3>Caroline Parker</h3>
                 </div>
                 <div class="col-3">
@@ -211,7 +413,7 @@
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
                     </div>
-                    <img src="static/pr2.jpg">
+                    <img src="static/user-2.png">
                     <h3>Caroline Parker</h3>
                 </div>
             </div>
@@ -221,19 +423,19 @@
         <div class="small-container">
             <div class="row">
                 <div class="col-5">
-                    <img src="static/logo.png">
+                    <img src="static/Air-Jordan-Logo-700x394.png">
                 </div>
                 <div class="col-5">
-                    <img src="static/logo.png">
+                    <img src="static/Nike-Logo-700x394.png">
                 </div>
                 <div class="col-5">
-                    <img src="static/logo.png">
+                    <img src="static/Adidas-Logo-700x394.png">
                 </div>
                 <div class="col-5">
-                    <img src="static/logo.png">
+                    <img src="static/Under-Armour-Logo-700x394.png">
                 </div>
                 <div class="col-5">
-                    <img src="static/logo.png">
+                    <img src="static/Puma-Logo-700x394.png">
                 </div>
             </div>
         </div>
@@ -245,13 +447,12 @@
                     <h3>Download Our App</h3>
                     <p>Download App for IOS and Android Mobile</p>
                 <div class="app-logo">
-                    <img src="static/pr1.webp">
-                    <img src="static/pr1.webp">
+                    <img src="static/app-store.png">
+                    <img src="static/play-store.png">
                 </div>
                 </div>
                 <div class="footer-col-2">
-                    <img src="static/pr4.jpg">
-                    <p>Lorem</p>
+                    <img src="static/logo2.png">
                 </div>
                 <div class="footer-col-3">
                     <h3>Useful Links</h3>
