--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KickStore | Ecommerce Website</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
@@ -15,7 +16,7 @@
             <img src="static/logo2.png" width="125px">
          </div>
          <nav>
-            <ul>
+            <ul id="MenuItems">
                 <li><a href="">Home</a></li>
                 <li><a href="">Products</a></li>
                 <li><a href="">About</a></li>
@@ -24,6 +25,7 @@
             </ul>
          </nav>
             <img src="static/cart.png" width="80px" height="80px">
+            <img src="" class="menu-icon" onclick="menutoggle()">
         </div>
         <div class="row">
             <div class="col-2">
@@ -476,5 +478,20 @@
             <p class="copyright">Copyright 2024 spiwik98</p>
         </div>
     </div>
+        <script>
+            var MenuItems = document.getElementByID("MenuItems");
+            MenuItems.style.maxHeight = "0px";
+            function menutoggle(){
+                if (MenuItems.style.maxHeight == "0px")
+                    {
+                        MenuItems.style.maxHeight == "200px";
+                    }
+                else
+                    {
+                        MenuItems.style.maxHeight == "0px";
+                    }
+
+            }
+        </script>
 </body>
 </html>
