images changes commit

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li><a href="">Profile</a></li>
             </ul>
          </nav>
-            <img src="static/cart.png" width="80px" height="80px">
+            <img src="static/cart.png" width="30px" height="30px">
             <img src="" class="menu-icon" onclick="menutoggle()">
         </div>
         <div class="row">
@@ -381,7 +381,7 @@
             <div class="row">
                 <div class="col-3">
                    <i class="fa fa-quote-left"></i>
-                    <p>Lorem sdssd</p>
+                    <p>Fantastic selection and superb customer service! Highly recommend!"</p>
                     <div class="rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
@@ -389,12 +389,12 @@
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
                     </div>
-                    <img src="static/user-2.png">
+                    <img src="static/user-1.png">
                     <h3>Caroline Parker</h3>
                 </div>
                 <div class="col-3">
                    <i class="fa fa-quote-left"></i>
-                    <p>Lorem sdssd</p>
+                    <p>Every time I step into Sneakers Store, I leave with a smile on my face and a fresh pair on my feet. Love it!</p>
                     <div class="rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
@@ -403,11 +403,11 @@
                         <i class="fa fa-star"></i>
                     </div>
                     <img src="static/user-2.png">
-                    <h3>Caroline Parker</h3>
+                    <h3>Tom Holland</h3>
                 </div>
                 <div class="col-3">
                    <i class="fa fa-quote-left"></i>
-                    <p>Lorem sdssd</p>
+                    <p>Top-notch quality and unbeatable prices!Top-notch quality and unbeatable prices! Incredible variety and trend-setting styles! </p>
                     <div class="rating">
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
@@ -415,8 +415,8 @@
                         <i class="fa fa-star"></i>
                         <i class="fa fa-star"></i>
                     </div>
-                    <img src="static/user-2.png">
-                    <h3>Caroline Parker</h3>
+                    <img src="static/user-3.png">
+                    <h3>Serena Williams</h3>
                 </div>
             </div>
         </div>
