--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
          <nav>
             <ul id="MenuItems">
                 <li><a href="">Home</a></li>
-                <li><a href="">Products</a></li>
+                <li><a href="products.html">Products</a></li>
                 <li><a href="">About</a></li>
                 <li><a href="">Contact</a></li>
                 <li><a href="">Profile</a></li>
             </ul>
          </nav>
             <img src="static/cart.png" width="30px" height="30px">
-            <img src="" class="menu-icon" onclick="menutoggle()">
+            <img src="static/menu.png" class="menu-icon" onclick="menutoggle()">
         </div>
         <div class="row">
             <div class="col-2">
@@ -442,6 +442,7 @@
             </div>
         </div>
     </div>
+
     <div class="footer">
         <div class="container">
             <div class="row">
